# BARC_Rockin

./: Logging.txt  README.md
BARC_Rockin_launch/: CMakeLists.txt  package.xml
BARC_Rockin_launch/launch/: mapping.launch  task1.launch  task1.launch~
BARC_Rockin_launch/map/: map.pgm
BARC_Rockin_launch/rviz_cfg/: rviz_cfg.rviz
barc_rockin_launch/: CMakeLists.txt  package.xml
barc_rockin_launch/launch/: slam_gmapping.launch  task2.launch
color_detector/: CMakeLists.txt  README.md  package.xml
color_detector/src/: color_detector.cpp
door_detection/wander/: CMakeLists.txt  package.xml
door_status/: CMakeLists.txt  package.xml
door_status/src/: door_checker.cpp
dora_2dnav/: CMakeLists.txt  package.xml  pioneer.inc~  stage_pioneer.world~
dora_2dnav/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  base_local_planner_params_amcl.yaml  base_local_planner_params_amcl.yaml~  costmap_common_params.yaml~  costmap_common_params_amcl.yaml  costmap_common_params_amcl.yaml~  global_costmap_params.yaml~  global_costmap_params_acml.yaml~  global_costmap_params_amcl.yaml  global_costmap_params_amcl.yaml~  local_costmap_params.yaml~  local_costmap_params_acml.yaml~  local_costmap_params_amcl.yaml  local_costmap_params_amcl.yaml~
dora_2dnav/launch/: amcl_node.launch  amcl_node.launch~  dora_configuration.launch  dora_configuration.launch~  dora_configuration_stage.launch  dora_configuration_stage.launch~  dora_nav.launch~  dora_one_computer.launch  dora_operator.launch  dora_operator.launch~  dora_robot.launch  dora_robot.launch~  gazebo_pioneer.launch  move_base.launch  move_base.launch~  slam_gmapping.launch
dora_2dnav/world/: hokuyolaser.inc  lgfloor.world~  pioneer.inc  stage_pioneer.world
dora_nav_goals/: CMakeLists.txt  package.xml
dora_nav_goals/msg/: named_coordinates.msg
dora_nav_goals/src/: dora_nav_goals_node.cpp
face_add/: CMakeLists.txt  README.md  README.md~  package.xml
face_add/src/: face_add_node.cpp
face_recognizer/: CMakeLists.txt  README.md  dataset_CSV.txt  package.xml
face_recognizer/dataset/: dataset_CSV.txt~
face_recognizer/src/: face_recognizer_node.cpp  face_recognizer_node.cpp~
laser_leg_detection/: CMakeLists.txt  package.xml
laser_leg_detection/src/: laser_leg_detection_node.cpp  laser_leg_detection_node.h
leg_detector/: CMakeLists.txt  package.xml
leg_detector/src/: leg_detector_node.cpp
mixed_initiative_controller/: CMakeLists.txt  package.xml  package.xml~
mixed_initiative_controller/src/: mixed_initiative_controller.cpp  mixed_initiative_controller_node.cpp
mixed_initiative_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml~
mixed_initiative_teleop/launch/: jaguar_teleop.launch~
mixed_initiative_teleop/src/: mixed_initiative_teleop.cpp  mixed_initiative_teleop_node.cpp
simple_follow_human_simulation/: CMakeLists.txt  package.xml
simple_follow_human_simulation/msg/: Pose.msg  Recognizer.msg
simple_follow_human_simulation/src/: JoyToRobot.cpp  JoyToRobot.cpp~  Navigator01.cpp~  Recognizer01.cpp  Recognizer01.cpp~  Tracker01.cpp  Tracker01.cpp~
simple_follow_human_simulation/worlds/: map01_Room.world  map02_RoomFurniture.world  map02_RoomFurnitureHard.world  map03_Corridor.world  map03_CorridorHard.world  p00_EmptyRoom.world  p01_Corridor.world  p02_HouseRoom.world
simple_follow_human_simulation/worlds/include/: laser_Fake.inc  laser_URG04LX.inc  laser_URG04LX.inc~  model_Human.inc  model_HumanManiqui.inc  model_RobotDiff.inc  model_Table.inc
speech/: CMakeLists.txt  package.xml
speech/src/: Speech.py
speech_rec/: CMakeLists.txt  package.xml
speech_rec/files/: task2  task2.dic  task2.lm  task2.log_pronounce  task2.sent  task2.vocab  yesno.lm
speech_rec/launch/: ex.launch  task2.launch
speech_rec/src/: speech_rec.cpp
state_machine/: CMakeLists.txt  README.md  package.xml
state_machine/scripts/: StateMachine.py  state_machine_task1.py  state_machine_task1.py~
status_publisher/: CMakeLists.txt
voice_nav/: voice_cmd.corpus  voice_cmd.launch
voice_teleop/: CMakeLists.txt  package.xml  voice_cmd.dic
voice_teleop/launch/: map.pgm  map.yaml  voice_teleop.launch  voice_teleop_demo.launch
voice_teleop/src/: voice_teleop_node.cpp
wait_button/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
wait_button/msg/: button.msg
(+9 files in other folders)
