<?xml version="1.0"?>
<package>
  <name>voice_teleop</name>
  <version>1.0.0</version>
  <description>The voice_teleop package takes voice commands and sends motion commands </description>

  <maintainer email="manolis.chiou@gmail.com">Manolis</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/uobirlab/jaguar</url> 


  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pocketsphinx</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <run_depend>pocketsphinx</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

 
</package>
